# Harmonix_AI

./: .env.example  .gitignore  GITHUB_PUBLISH_CHECKLIST.md  README.en.md  README.md  UPLOAD_NOTATION_DEBUGGING.md  UPLOAD_NOTATION_TROUBLESHOOTING.md  pyproject.toml  requirements-dev.txt  requirements.txt  rxconfig.py
harmonix/: __init__.py  app.py  state.py
harmonix/ai/: __init__.py  lmstudio.py  prompts.py  rag.py
harmonix/core/: __init__.py  bass.py  guitar.py  harmony.py  midi.py  progression_presets.py  scales.py  song_analysis.py  theory_library.py
harmonix/services/: notation_import.py
harmonix/ui/: __init__.py  components.py
tests/: test_bass_midi.py  test_guitar_visuals.py  test_harmony.py  test_lmstudio.py  test_notation_import.py  test_song_analysis.py  test_theory_library.py
