[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "harmonix-ai"
version = "0.1.0"
description = "Local-first jazz harmony assistant with deterministic music tooling and Reflex UI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "reflex>=0.8.0",
  "openai>=1.30.0",
  "mido>=1.3.0",
  "PyMuPDF>=1.24.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["harmonix"]